--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,8 @@
 rootProject.name = 'PropertyRegistration'
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
+include ':react-native-fetch-blob'
+project(':react-native-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
+
 
 include ':app'
