--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-apollo": "^2.1.4",
     "react-native": "~0.55.2",
     "react-native-camera": "^1.1.4",
+    "react-native-path": "^0.0.5",
     "react-navigation": "^2.0.1",
+    "rn-fetch-blob": "^0.10.11",
     "styled-components": "^3.2.6"
   }
 }
