--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "hoist-non-react-statics": "^2.5.0",
+    "moment": "^2.22.2",
     "native-base": "^2.4.4",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
